...
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        createWebView()
        setupBackButton()
        webView.accessibilityIdentifier = "UnsplashWebView"
        presenter?.viewDidLoad()
        

    }
    
    private func addNewKVOObservation() {
...
